--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
 .tile {
-    height: 100px;
-    width: 25%;
-    float: left;
-  }
+  float: left;
+}
 
 .container {
   display: flex;
-  flex-wrap: wrap;;
+  flex-wrap: wrap;
   width: 100%;
 }
